<resources>
    <string name="app_name" translatable="false">Fallas 2024</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="prefs_file" translatable="false">fallas2024_prefs</string>
    <!--*********************** GENERALES  **************************-->
    <string name="Si">Yes</string>
    <string name="Aceptar">Accept</string>
    <!--*************************************************************-->

    <!-- ******************** Login Activity ************************-->
    <string name="iniciarSesion">LOG IN</string>
    <string name="registrarse">REGISTER</string>
    <string name="email">Email</string>
    <string name="contrasena">Password</string>
    <!--**** Restablecer contraseña ****-->
    <string name="olvidoContraseña"><u>I forgot my password</u></string>
    <string name="correoEnviado">An email has been sent to reset your password</string>
    <string name="correoNoEnviadoError">An error occurred while sending the email</string>
    <!--********************************-->
    <!--***** Exception Login *****-->
    <string name="usuarioNoExiste">This email is not registered.</string>
    <string name="contrasenaIncorrecta">Incorrect password.</string>
    <string name="errorLogin">An error occurred authenticating the user.</string>
    <!--***************************-->
    <!-- *** Exception Register ***-->
    <string name="usuarioYaExiste">This email is already registered.</string>
    <string name="correoInvalido">Invalid email.</string>
    <string name="contrasenaInvalida">Invalid password.</string>
    <string name="contrasenaRequisitos">The password must contain at least 6 characters, a number, a capital letter and a lowercase character.</string>
    <string name="errorRegistro">An error occurred registering the user.</string>
    <!--***************************-->
    <!--*************************************************************-->

    <!-- ******************** HomeFragment **************************-->
    <string name="menu_home">Home</string>
    <string name="menu_infantiles">CHILDREN\'S MONUMENTS</string>
    <string name="menu_adultas">ADULTS MONUMENTS</string>
    <string name="home_mapa">MAP</string>
    <string name="home_calendario">EVENTS</string>
    <string name="favoritos">FAVORITES</string>
    <string name="cerrarSesion">Log out</string>
    <string name="consultarCerrarSesion">Do you want to log out?</string>
    <!--***** Acerca de *****-->
    <string name="acercaDe">ABOUT THE APP</string>
    <string name="creador">Creator</string>
    <string name="version">Version</string>
    <string name="description">Welcome to Fallas Guide, your interactive guide to the Fallas festival in Valencia.\n

With this application, you can explore the monuments for adults and children, see their location on the map and know the scheduled events.\n

In addition, you can mark your favorite monuments and events to have them always at hand.\n

If you have any questions or need help, do not hesitate to contact us.\n

Enjoy the Fallas!</string>
    <!--*********************-->
    <!--*************************************************************-->

    <!-- ******************** Fallas Fragment ***********************-->
    <string name="premioSeccion">Section award</string>
    <string name="premioIG">Ingenuity and grace award</string>
    <string name="seccion">Section</string>
    <string name="noCargaFallas">FAILED TO LOAD FAULTS</string>
    <string name="reintentar">Retry</string>
    <!--*************************************************************-->

    <!-- ******************** Mapa Fragment *************************-->
    <string name="filtrar">Filter by sections</string>
    <string name="especial">Special</string>
    <string name="fueraConcurso">OC</string>
    <string name="adultos">Adults</string>
    <string name="infantiles">Children\'s</string>
    <!--*************************************************************-->

    <!-- ******************** Favoritos Fragment ********************-->
    <string name="seccionEspecialInfantl">Special children\'s section</string>
    <string name="seccionEspecial">Special section</string>
    <string name="seccionFueraConcurso">Out of competition section</string>
    <string name="listaVacia">There is no Falla as a favorite</string>
    <string name="borrarTitulo">Delete all favorites?</string>
    <string name="borrarMensaje">Are you sure you want to delete all your favorites?</string>
    <!--*************************************************************-->

    <!-- ******************** Falla Details Fragment ****************-->
    <string name="artista">Artist</string>
    <string name="mapaTitulo">Open Maps</string>
    <string name="mapaMensaje">Do you want to open Google Maps to get the route?</string>
    <string name="bocetoTitulo">Open sketch</string>
    <string name="bocetoMensaje">Do you want to open the sketch on the Internet?</string>
    <string name="IGtitulo">Ingenuity and grace</string>
    <string name="premios">Awards</string>
    <string name="AddFav">Added to favourites</string>
    <string name="RemoveFav">Removed from favourites</string>
    <!--*************************************************************-->

    <!-- ******************** Calendario Fragment *******************-->
    <string name="detallesEvento">More details</string>
    <string name="listaVaciaEventos">There are no events for this day</string>
    <string name="alarmaTitulo">Add notice</string>
    <string name="eliminarAlarma">Remove notice</string>
    <string name="alarmaMensaje">Notice scheduled for 5 minutes before the event</string>
    <string name="fecha">Date</string>
    <string name="lugar">Place</string>
    <string name="descripcion">Description</string>
    <!--*************************************************************-->
</resources>