<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <!--<fragment
        android:id="@+id/nav_home"
        android:name="pardo.tarin.uv.fallas.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_adultas"
            app:destination="@id/nav_adultas" />
        <action
            android:id="@+id/action_nav_home_to_nav_infantiles"
            app:destination="@id/nav_infantiles" />
    </fragment>

    <fragment
        android:id="@+id/nav_infantiles"
        android:name="pardo.tarin.uv.fallas.ui.infantiles.InfantilesFragment"
        android:label="Fallas Infantiles"
        tools:layout="@layout/fragment_infantiles" >
        <action
            android:id="@+id/action_nav_infantiles_to_nav_adultas"
            app:destination="@id/nav_adultas" />
        <action
            android:id="@+id/action_nav_infantiles_to_fallaDetails"
            app:destination="@id/fallaDetails" />
    </fragment>

    <fragment
        android:id="@+id/nav_adultas"
        android:name="pardo.tarin.uv.fallas.ui.adultas.AdultasFragment"
        android:label="Fallas Adultas"
        tools:layout="@layout/fragment_adultas" >
        <action
            android:id="@+id/action_nav_adultas_to_fallaDetails"
            app:destination="@id/fallaDetails" />
    </fragment>-->

    <fragment
        android:id="@+id/nav_home"
        android:name="pardo.tarin.uv.fallas.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_fallasFragment"
            app:destination="@id/fallasFragment" >
            <argument
                android:name="tipo"
                app:argType="string" />
        </action>
        <action
            android:id="@+id/action_nav_home_to_mapaFragment"
            app:destination="@id/mapaFragment" />
        <action
            android:id="@+id/action_nav_home_to_eventsFragment"
            app:destination="@id/calendarioFragment" />
        <action
            android:id="@+id/action_nav_home_to_favoritosFragment"
            app:destination="@id/favoritosFragment" />
    </fragment>

    <fragment
        android:id="@+id/fallasFragment"
        android:name="pardo.tarin.uv.fallas.FallasFragment"
        android:label="@string/menu_adultas"
        tools:layout="@layout/fragment_fallas">
        <action
            android:id="@+id/action_fallasFragment_to_fallaDetails2"
            app:destination="@id/fallaDetails" />
    </fragment>

    <fragment
        android:id="@+id/fallaDetails"
        android:name="pardo.tarin.uv.fallas.FallaDetails"
        android:label="FallaDetails" />

    <fragment
        android:id="@+id/mapaFragment"
        android:name="pardo.tarin.uv.fallas.MapaFragment"
        android:label="@string/home_mapa">
        <action
            android:id="@+id/action_mapaFragment_to_fallaDetails"
            app:destination="@id/fallaDetails">
            <argument
                android:name="tipo"
                app:argType="string" />
        </action>
    </fragment>
    <fragment
        android:id="@+id/calendarioFragment"
        android:name="pardo.tarin.uv.fallas.CalendarioFragment"
        android:label="Calendario"
        tools:layout="@layout/fragment_calendario" />
    <fragment
        android:id="@+id/favoritosFragment"
        android:name="pardo.tarin.uv.fallas.FavoritosFragment"
        android:label="Fallas Favoritas"
        tools:layout="@layout/fragment_favoritos" >
        <action
            android:id="@+id/action_favoritosFragment_to_fallaDetails"
            app:destination="@id/fallaDetails" />
    </fragment>
</navigation>